syntax.output
State 10 conflicts: 3 reduce/reduce
State 19 conflicts: 2 shift/reduce
State 24 conflicts: 1 shift/reduce
State 29 conflicts: 1 shift/reduce
State 50 conflicts: 1 shift/reduce
State 59 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier ExtDecList
    6       | Specifier SEMI
    7       | Specifier
    8       | Specifier FunDec FunCompSt
    9       | error SEMI

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList

   12 Specifier: TYPE
   13          | StructSpecifier

   14 StructSpecifier: STRUCT OptTag LC DefList RC
   15                | STRUCT OptTag DefList RC
   16                | STRUCT Tag
   17                | STRUCT OptTag LC error RC

   18 OptTag: ID
   19       | %empty

   20 Tag: ID

   21 VarDec: ID
   22       | VarDec LB INT RB

   23 FunDec: ID LP VarList RP
   24       | ID LP RP
   25       | ID LP error RP

   26 VarList: ParamDec COMMA VarList
   27        | ParamDec

   28 ParamDec: Specifier VarDec

   29 FunCompSt: LC DefList StmtList RC
   30          | DefList StmtList RC

   31 CompSt: LC DefList StmtList RC

   32 StmtList: Stmt StmtList
   33         | %empty

   34 Stmt: Exp SEMI
   35     | Exp
   36     | CompSt
   37     | RETURN Exp SEMI
   38     | RETURN Exp
   39     | IF LP Exp RP Stmt
   40     | IF LP Exp RP Stmt ELSE Stmt
   41     | WHILE LP Exp RP Stmt
   42     | error SEMI
   43     | IF LP error RP Stmt
   44     | IF LP error RP Stmt ELSE Stmt
   45     | WHILE LP error RP Stmt

   46 DefList: Def DefList
   47        | %empty

   48 Def: Specifier DecList SEMI
   49    | Specifier DecList
   50    | error SEMI

   51 DecList: Dec
   52        | Dec COMMA DecList

   53 Dec: VarDec
   54    | VarDec ASSIGNOP Exp

   55 Exp: Exp ASSIGNOP Exp
   56    | Exp AND Exp
   57    | Exp OR Exp
   58    | Exp RELOP Exp
   59    | Exp PLUS Exp
   60    | Exp MINUS Exp
   61    | Exp STAR Exp
   62    | Exp DIV Exp
   63    | LP Exp RP
   64    | MINUS Exp
   65    | NOT Exp
   66    | ID LP Args RP
   67    | ID LP RP
   68    | Exp LB Exp RB
   69    | Exp DOT ID
   70    | ID
   71    | INT
   72    | FLOAT

   73 Args: Exp COMMA Args
   74     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 9 17 25 42 43 44 45 50
ID (258) 18 20 21 23 24 25 66 67 69 70
ASSIGNOP (259) 54 55
RELOP (260) 58
AND (261) 56
OR (262) 57
NOT (263) 65
PLUS (264) 59
MINUS (265) 60 64
STAR (266) 61
DIV (267) 62
TYPE (268) 12
STRUCT (269) 14 15 16 17
INT (270) 22 71
FLOAT (271) 72
IF (272) 39 40 43 44
ELSE (273) 40 44
WHILE (274) 41 45
RETURN (275) 37 38
SEMI (276) 4 6 9 34 37 42 48 50
COMMA (277) 11 26 52 73
DOT (278) 69
LP (279) 23 24 25 39 40 41 43 44 45 63 66 67
RP (280) 23 24 25 39 40 41 43 44 45 63 66 67
LB (281) 22 68
RB (282) 22 68
LC (283) 14 17 29 31
RC (284) 14 15 17 29 30 31
LOWER_THAN_LC (285)
LOWER_THAN_SEMI (286)
LOWER_THAN_ELSE (287)


Nonterminals, with rules where they appear

$accept (33)
    on left: 0
Program (34)
    on left: 1, on right: 0
ExtDefList (35)
    on left: 2 3, on right: 1 2
ExtDef (36)
    on left: 4 5 6 7 8 9, on right: 2
ExtDecList (37)
    on left: 10 11, on right: 4 5 11
Specifier (38)
    on left: 12 13, on right: 4 5 6 7 8 28 48 49
StructSpecifier (39)
    on left: 14 15 16 17, on right: 13
OptTag (40)
    on left: 18 19, on right: 14 15 17
Tag (41)
    on left: 20, on right: 16
VarDec (42)
    on left: 21 22, on right: 10 11 22 28 53 54
FunDec (43)
    on left: 23 24 25, on right: 8
VarList (44)
    on left: 26 27, on right: 23 26
ParamDec (45)
    on left: 28, on right: 26 27
FunCompSt (46)
    on left: 29 30, on right: 8
CompSt (47)
    on left: 31, on right: 36
StmtList (48)
    on left: 32 33, on right: 29 30 31 32
Stmt (49)
    on left: 34 35 36 37 38 39 40 41 42 43 44 45, on right: 32 39 40
    41 43 44 45
DefList (50)
    on left: 46 47, on right: 14 15 29 30 31 46
Def (51)
    on left: 48 49 50, on right: 46
DecList (52)
    on left: 51 52, on right: 48 49 52
Dec (53)
    on left: 53 54, on right: 51 52
Exp (54)
    on left: 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72,
    on right: 34 35 37 38 39 40 41 54 55 56 57 58 59 60 61 62 63 64
    65 68 69 73 74
Args (55)
    on left: 73 74, on right: 66 73


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    9 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   12 Specifier: TYPE .

    $default  reduce using rule 12 (Specifier)


State 3

   14 StructSpecifier: STRUCT . OptTag LC DefList RC
   15                | STRUCT . OptTag DefList RC
   16                | STRUCT . Tag
   17                | STRUCT . OptTag LC error RC

    ID  shift, and go to state 10

    $default  reduce using rule 19 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . ExtDecList
    6       | Specifier . SEMI
    7       | Specifier .
    8       | Specifier . FunDec FunCompSt

    ID    shift, and go to state 15
    SEMI  shift, and go to state 16

    $default  reduce using rule 7 (ExtDef)

    ExtDecList  go to state 17
    VarDec      go to state 18
    FunDec      go to state 19


State 8

   13 Specifier: StructSpecifier .

    $default  reduce using rule 13 (Specifier)


State 9

    9 ExtDef: error SEMI .

    $default  reduce using rule 9 (ExtDef)


State 10

   18 OptTag: ID .
   20 Tag: ID .

    $end      reduce using rule 20 (Tag)
    error     reduce using rule 18 (OptTag)
    error     [reduce using rule 20 (Tag)]
    ID        reduce using rule 20 (Tag)
    TYPE      reduce using rule 18 (OptTag)
    TYPE      [reduce using rule 20 (Tag)]
    STRUCT    reduce using rule 18 (OptTag)
    STRUCT    [reduce using rule 20 (Tag)]
    SEMI      reduce using rule 20 (Tag)
    $default  reduce using rule 18 (OptTag)


State 11

   14 StructSpecifier: STRUCT OptTag . LC DefList RC
   15                | STRUCT OptTag . DefList RC
   17                | STRUCT OptTag . LC error RC

    error   shift, and go to state 20
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3
    LC      shift, and go to state 21

    RC  reduce using rule 47 (DefList)

    Specifier        go to state 22
    StructSpecifier  go to state 8
    DefList          go to state 23
    Def              go to state 24


State 12

   16 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 16 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

   21 VarDec: ID .
   23 FunDec: ID . LP VarList RP
   24       | ID . LP RP
   25       | ID . LP error RP

    LP  shift, and go to state 25

    $default  reduce using rule 21 (VarDec)


State 16

    6 ExtDef: Specifier SEMI .

    $default  reduce using rule 6 (ExtDef)


State 17

    4 ExtDef: Specifier ExtDecList . SEMI
    5       | Specifier ExtDecList .

    SEMI  shift, and go to state 26

    $default  reduce using rule 5 (ExtDef)


State 18

   10 ExtDecList: VarDec .
   11           | VarDec . COMMA ExtDecList
   22 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 27
    LB     shift, and go to state 28

    $default  reduce using rule 10 (ExtDecList)


State 19

    8 ExtDef: Specifier FunDec . FunCompSt

    error   shift, and go to state 20
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3
    LC      shift, and go to state 29

    error   [reduce using rule 47 (DefList)]
    ID      reduce using rule 47 (DefList)
    NOT     reduce using rule 47 (DefList)
    MINUS   reduce using rule 47 (DefList)
    INT     reduce using rule 47 (DefList)
    FLOAT   reduce using rule 47 (DefList)
    IF      reduce using rule 47 (DefList)
    WHILE   reduce using rule 47 (DefList)
    RETURN  reduce using rule 47 (DefList)
    LP      reduce using rule 47 (DefList)
    LC      [reduce using rule 47 (DefList)]
    RC      reduce using rule 47 (DefList)

    Specifier        go to state 22
    StructSpecifier  go to state 8
    FunCompSt        go to state 30
    DefList          go to state 31
    Def              go to state 24


State 20

   50 Def: error . SEMI

    SEMI  shift, and go to state 32


State 21

   14 StructSpecifier: STRUCT OptTag LC . DefList RC
   17                | STRUCT OptTag LC . error RC

    error   shift, and go to state 33
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 47 (DefList)

    Specifier        go to state 22
    StructSpecifier  go to state 8
    DefList          go to state 34
    Def              go to state 24


State 22

   48 Def: Specifier . DecList SEMI
   49    | Specifier . DecList

    ID  shift, and go to state 35

    VarDec   go to state 36
    DecList  go to state 37
    Dec      go to state 38


State 23

   15 StructSpecifier: STRUCT OptTag DefList . RC

    RC  shift, and go to state 39


State 24

   46 DefList: Def . DefList

    error   shift, and go to state 20
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 47 (DefList)]
    ID      reduce using rule 47 (DefList)
    NOT     reduce using rule 47 (DefList)
    MINUS   reduce using rule 47 (DefList)
    INT     reduce using rule 47 (DefList)
    FLOAT   reduce using rule 47 (DefList)
    IF      reduce using rule 47 (DefList)
    WHILE   reduce using rule 47 (DefList)
    RETURN  reduce using rule 47 (DefList)
    LP      reduce using rule 47 (DefList)
    LC      reduce using rule 47 (DefList)
    RC      reduce using rule 47 (DefList)

    Specifier        go to state 22
    StructSpecifier  go to state 8
    DefList          go to state 40
    Def              go to state 24


State 25

   23 FunDec: ID LP . VarList RP
   24       | ID LP . RP
   25       | ID LP . error RP

    error   shift, and go to state 41
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3
    RP      shift, and go to state 42

    Specifier        go to state 43
    StructSpecifier  go to state 8
    VarList          go to state 44
    ParamDec         go to state 45


State 26

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 27

   11 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 35

    ExtDecList  go to state 46
    VarDec      go to state 18


State 28

   22 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 47


State 29

   29 FunCompSt: LC . DefList StmtList RC

    error   shift, and go to state 20
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 47 (DefList)]
    ID      reduce using rule 47 (DefList)
    NOT     reduce using rule 47 (DefList)
    MINUS   reduce using rule 47 (DefList)
    INT     reduce using rule 47 (DefList)
    FLOAT   reduce using rule 47 (DefList)
    IF      reduce using rule 47 (DefList)
    WHILE   reduce using rule 47 (DefList)
    RETURN  reduce using rule 47 (DefList)
    LP      reduce using rule 47 (DefList)
    LC      reduce using rule 47 (DefList)
    RC      reduce using rule 47 (DefList)

    Specifier        go to state 22
    StructSpecifier  go to state 8
    DefList          go to state 48
    Def              go to state 24


State 30

    8 ExtDef: Specifier FunDec FunCompSt .

    $default  reduce using rule 8 (ExtDef)


State 31

   30 FunCompSt: DefList . StmtList RC

    error   shift, and go to state 49
    ID      shift, and go to state 50
    NOT     shift, and go to state 51
    MINUS   shift, and go to state 52
    INT     shift, and go to state 53
    FLOAT   shift, and go to state 54
    IF      shift, and go to state 55
    WHILE   shift, and go to state 56
    RETURN  shift, and go to state 57
    LP      shift, and go to state 58
    LC      shift, and go to state 59

    RC  reduce using rule 33 (StmtList)

    CompSt    go to state 60
    StmtList  go to state 61
    Stmt      go to state 62
    Exp       go to state 63


State 32

   50 Def: error SEMI .

    $default  reduce using rule 50 (Def)


State 33

   17 StructSpecifier: STRUCT OptTag LC error . RC
   50 Def: error . SEMI

    SEMI  shift, and go to state 32
    RC    shift, and go to state 64


State 34

   14 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 65


State 35

   21 VarDec: ID .

    $default  reduce using rule 21 (VarDec)


State 36

   22 VarDec: VarDec . LB INT RB
   53 Dec: VarDec .
   54    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 66
    LB        shift, and go to state 28

    $default  reduce using rule 53 (Dec)


State 37

   48 Def: Specifier DecList . SEMI
   49    | Specifier DecList .

    SEMI  shift, and go to state 67

    $default  reduce using rule 49 (Def)


State 38

   51 DecList: Dec .
   52        | Dec . COMMA DecList

    COMMA  shift, and go to state 68

    $default  reduce using rule 51 (DecList)


State 39

   15 StructSpecifier: STRUCT OptTag DefList RC .

    $default  reduce using rule 15 (StructSpecifier)


State 40

   46 DefList: Def DefList .

    $default  reduce using rule 46 (DefList)


State 41

   25 FunDec: ID LP error . RP

    RP  shift, and go to state 69


State 42

   24 FunDec: ID LP RP .

    $default  reduce using rule 24 (FunDec)


State 43

   28 ParamDec: Specifier . VarDec

    ID  shift, and go to state 35

    VarDec  go to state 70


State 44

   23 FunDec: ID LP VarList . RP

    RP  shift, and go to state 71


State 45

   26 VarList: ParamDec . COMMA VarList
   27        | ParamDec .

    COMMA  shift, and go to state 72

    $default  reduce using rule 27 (VarList)


State 46

   11 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 11 (ExtDecList)


State 47

   22 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 73


State 48

   29 FunCompSt: LC DefList . StmtList RC

    error   shift, and go to state 49
    ID      shift, and go to state 50
    NOT     shift, and go to state 51
    MINUS   shift, and go to state 52
    INT     shift, and go to state 53
    FLOAT   shift, and go to state 54
    IF      shift, and go to state 55
    WHILE   shift, and go to state 56
    RETURN  shift, and go to state 57
    LP      shift, and go to state 58
    LC      shift, and go to state 59

    RC  reduce using rule 33 (StmtList)

    CompSt    go to state 60
    StmtList  go to state 74
    Stmt      go to state 62
    Exp       go to state 63


State 49

   42 Stmt: error . SEMI

    SEMI  shift, and go to state 75


State 50

   66 Exp: ID . LP Args RP
   67    | ID . LP RP
   70    | ID .

    LP  shift, and go to state 76

    LP        [reduce using rule 70 (Exp)]
    $default  reduce using rule 70 (Exp)


State 51

   65 Exp: NOT . Exp

    ID     shift, and go to state 50
    NOT    shift, and go to state 51
    MINUS  shift, and go to state 52
    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    LP     shift, and go to state 58

    Exp  go to state 77


State 52

   64 Exp: MINUS . Exp

    ID     shift, and go to state 50
    NOT    shift, and go to state 51
    MINUS  shift, and go to state 52
    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    LP     shift, and go to state 58

    Exp  go to state 78


State 53

   71 Exp: INT .

    $default  reduce using rule 71 (Exp)


State 54

   72 Exp: FLOAT .

    $default  reduce using rule 72 (Exp)


State 55

   39 Stmt: IF . LP Exp RP Stmt
   40     | IF . LP Exp RP Stmt ELSE Stmt
   43     | IF . LP error RP Stmt
   44     | IF . LP error RP Stmt ELSE Stmt

    LP  shift, and go to state 79


State 56

   41 Stmt: WHILE . LP Exp RP Stmt
   45     | WHILE . LP error RP Stmt

    LP  shift, and go to state 80


State 57

   37 Stmt: RETURN . Exp SEMI
   38     | RETURN . Exp

    ID     shift, and go to state 50
    NOT    shift, and go to state 51
    MINUS  shift, and go to state 52
    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    LP     shift, and go to state 58

    Exp  go to state 81


State 58

   63 Exp: LP . Exp RP

    ID     shift, and go to state 50
    NOT    shift, and go to state 51
    MINUS  shift, and go to state 52
    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    LP     shift, and go to state 58

    Exp  go to state 82


State 59

   31 CompSt: LC . DefList StmtList RC

    error   shift, and go to state 20
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 47 (DefList)]
    ID      reduce using rule 47 (DefList)
    NOT     reduce using rule 47 (DefList)
    MINUS   reduce using rule 47 (DefList)
    INT     reduce using rule 47 (DefList)
    FLOAT   reduce using rule 47 (DefList)
    IF      reduce using rule 47 (DefList)
    WHILE   reduce using rule 47 (DefList)
    RETURN  reduce using rule 47 (DefList)
    LP      reduce using rule 47 (DefList)
    LC      reduce using rule 47 (DefList)
    RC      reduce using rule 47 (DefList)

    Specifier        go to state 22
    StructSpecifier  go to state 8
    DefList          go to state 83
    Def              go to state 24


State 60

   36 Stmt: CompSt .

    $default  reduce using rule 36 (Stmt)


State 61

   30 FunCompSt: DefList StmtList . RC

    RC  shift, and go to state 84


State 62

   32 StmtList: Stmt . StmtList
